# llm-vuln-scanner

./: .gitignore  config.yaml  full_report.json  main.py  pyproject.toml  report.html  requirements.txt
.github/workflows/: ci.yml
llm_vuln_scanner.egg-info/: PKG-INFO  SOURCES.txt
scanner/: code_scanner.py  dependency_scanner.py
tests/: test_dependency_scanner.py  test_main.py
utils/: config_loader.py  reporting.py
